# ccmd

./: .gitignore  CMakeLists.txt  ccmd.c  ccmd.h  config.h
example/: CMakeLists.txt  basic.c  cmd.c  cmd.cpp  subcommands.c
source/cli/: CMakeLists.txt  cli.c  cli.h  config.h
